--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "tauri:build": "tauri build"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-dialog": "^2",
     "@tauri-apps/plugin-fs": "^2",
