--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.3",
   "type": "module",
   "description": "A fast, beautiful, keyboard-first Git GUI that doesn't suck",
-  "author": "Graft Contributors",
+  "author": "Your Name",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
