--- a/package.json
+++ b/package.json
@@ -16,28 +16,29 @@
     "tauri:build": "tauri build"
   },
   "dependencies": {
-    "@monaco-editor/react": "^4.7.0",
-    "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-dialog": "^2",
+  "@monaco-editor/react": "^4.7.0",
+  "monaco-editor": "^0.45.0",
+    "@tauri-apps/api": "^2.9.0",
+    "@tauri-apps/plugin-dialog": "^2.4.2",
     "@tauri-apps/plugin-fs": "^2",
     "@tauri-apps/plugin-opener": "^2",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+  "react": "^18.2.0",
+  "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^2",
     "@testing-library/jest-dom": "^6.0.1",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "jsdom": "^22.1.0",
-  "vitest": "^4.0.7",
-    "@tauri-apps/cli": "^2",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
+  "@types/react": "^18.2.44",
+  "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^5.1.0",
     "autoprefixer": "^10.4.20",
+    "jsdom": "^22.1.0",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "typescript": "^5.6.3",
-    "vite": "^7.2.1"
+    "vite": "^7.2.1",
+    "vitest": "^4.0.7"
   }
 }
