--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.4-beta.1",
   "type": "module",
   "description": "A fast, beautiful, keyboard-first Git GUI that doesn't suck",
-  "author": "Dancode-188, BubblesTheDev",
+  "author": "Your Name",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
@@ -20,26 +20,34 @@
     "@tauri-apps/api": "^2.9.0",
     "@tauri-apps/plugin-dialog": "^2.4.2",
     "@tauri-apps/plugin-fs": "^2",
-    "@tauri-apps/plugin-opener": "^2",
-    "monaco-editor": "^0.45.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@tauri-apps/plugin-opener": "^2.5.2",
+    "fuse.js": "^7.1.0",
+    "monaco-editor": "^0.53.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2",
+    "@tauri-apps/cli": "^2.9.3",
     "@testing-library/jest-dom": "^6.0.1",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.10.0",
-    "@types/react": "^18.2.44",
-    "@types/react-dom": "^18.2.17",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.2",
     "@vitejs/plugin-react": "^5.1.0",
     "autoprefixer": "^10.4.20",
-    "jsdom": "^22.1.0",
+    "jest": "^30.2.0",
+    "jsdom": "^27.1.0",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
+    "tailwindcss": "^4.1.17",
+    "ts-jest": "^29.4.5",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
     "vite": "^7.2.1",
     "vitest": "^4.0.7"
+  },
+  "overrides": {
+    "glob": "^10.0.0"
   }
 }
