--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "version": "1.0.4-beta.1",
   "type": "module",
   "description": "A fast, beautiful, keyboard-first Git GUI that doesn't suck",
-  "author": "Your Name",
+  "author": "DanCode-118, BubblesTheDev",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
     "test": "vitest",
+    "test:performance": "vitest run all-tests/graphLayout.performance.test.ts",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
