--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "graft",
   "private": true,
-  "version": "1.0.4.1-msi",
+  "version": "1.0.5",
   "type": "module",
   "description": "A fast, beautiful, keyboard-first Git GUI that doesn't suck",
   "author": "DanCode-118, BubblesTheDev",
