--- a/package.json
+++ b/package.json
@@ -4,7 +4,15 @@
   "version": "1.0.3",
   "type": "module",
   "description": "A fast, beautiful, keyboard-first Git GUI that doesn't suck",
-  "author": "Your Name",
+  "author": "Daniel Bitengo <danbitemgo@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Dancode-188/graft.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Dancode-188/graft/issues"
+  },
+  "homepage": "https://github.com/Dancode-188/graft#readme",
   "license": "MIT",
   "scripts": {
     "dev": "vite",
@@ -29,7 +37,7 @@
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
     "jsdom": "^22.1.0",
-  "vitest": "^0.32.3",
+    "vitest": "^0.32.3",
     "@tauri-apps/cli": "^2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
