--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "graft"
-version = "0.8.0"
+version = "1.0.3"
 description = "A fast, beautiful, keyboard-first Git GUI that doesn't suck"
-authors = ["Graft Contributors"]
+authors = ["Daniel Bitengo <danbitemgo@gmail.com>"]
 license = "MIT"
-repository = "https://github.com/yourusername/graft"
+repository = "https://github.com/Dancode-188/graft"
 edition = "2021"
 
 [lib]
