chore: Add social badges to README and improve gitignore
- Add GitHub stars and forks badges to README
- Add debug and temporary file patterns to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,12 @@ dist-ssr
 *.sln
 *.sw?
 
+# Debug and temporary files
+debug-*.js
+*.debug.js
+*.debug.ts
+test-*.js
+scratch.*
 
 # Rust build output
 target/
