--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,3 +23,6 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 git2 = "0.19"
 chrono = "0.4"
+
+[dev-dependencies]
+tempfile = "3"
